Media query to fix high contrast in graphs (#431)

--- a/AngularApp/projects/app-service-diagnostics/src/styles/global.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/global.scss
@@ -120,6 +120,23 @@ body{
     }
 }
 
+@media screen and (-ms-high-contrast: black-on-white) {
+    .nvd3 text {
+        fill: #000 !important;
+        font-size: 12px !important;
+        font-weight: 400 !important;
+        font-family: inherit !important;
+    }
+}
+@media screen and (-ms-high-contrast: white-on-black) {
+    .nvd3 text {
+        fill: #fff !important;
+        font-size: 12px !important;
+        font-weight: 400 !important;
+        font-family: inherit !important;
+    }
+}
+
 .nvd3 text {
     font-size: 12px !important;
     font-weight: 400 !important;
